[package]
name = "advanzia2csv"
version = "0.1.1"
edition = "2021"
description = "Convert Advanzia PDF to CSV."
readme = "README.md"

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3.1"
csv = "1.3.0"
clap = { version = "4.5.18", features = ["derive"] }
log = "0.4.22"
simplelog = "0.12.2"
anyhow = "1.0.97"
lopdf = "0.36.0"
lazy_static = "1.5.0"
fern = { version = "0.7.1", features = ["colored"] }
humantime = "2.2.0"
chrono = "0.4.40"

[dev-dependencies]
test-log = "*"
